# YuhangAlisting

./: .gitattributes  .gitignore  AList-Desktop-Plan.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README-en.md  README.md  SECURITY.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: alist-desktop.yml
alist-desktop/: README.md  package.json
alist-desktop/docs/: USER_GUIDE.md
alist-desktop/scripts/: prebuild.js
alist-desktop/src/: App.vue  main.ts
alist-desktop/src-tauri/: Cargo.toml  tauri.conf.json
alist-desktop/src-tauri/src/: lib.rs  main.rs
alist-desktop/src-tauri/src/commands/: alist.rs  logs.rs  mod.rs  rclone.rs  settings.rs  system.rs
alist-desktop/src-tauri/src/config/: mod.rs
alist-desktop/src-tauri/src/services/: alist_manager.rs  health_check.rs  logs.rs  mod.rs  process.rs  rclone_manager.rs
alist-desktop/src-tauri/src/tray/: mod.rs
alist-desktop/src/assets/: main.css
alist-desktop/src/components/: LogViewer.vue  ServiceCard.vue  StatusIndicator.vue
alist-desktop/src/router/: index.ts
alist-desktop/src/stores/: logs.ts  mounts.ts  service.ts  settings.ts
alist-desktop/src/utils/: passwordCache.ts  tauri.ts
alist-desktop/src/views/: Dashboard.vue  Logs.vue  Mount.vue  Settings.vue
docs/: RELEASING.md  WIKI.md
